Update generated slides

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ Sponsors slide (required by organizators) - Oct 2015<br/>
 
 <!-- Image by sachso74 (DevianTArt) -->
 
-<small>Grigoriy Belenkiy<br/>
-Software engineer, McGraw Hill Financial
-<br/>
+<p><small>Grigoriy Belenkiy<br/>
+Software engineer, McGraw Hill Financial<br/>
+<a href="https://twitter.com/grishace">@grishace</a><br/>
 <br/>
 Denver Dev Day<br/>
-October 23, 2015</small>
+October 23, 2015</small></p>
 
 </section>
 
@@ -98,7 +98,8 @@ October 23, 2015</small>
 
 <h4>Questions?</h4>
 
-<p><a href="https://github.com/grishace/ddd-akka"><a href="https://github.com/grishace/ddd-akka">https://github.com/grishace/ddd-akka</a></a></p>
+<p><a href="https://github.com/grishace/ddd-akka"><img src="./images/qrcode.png" alt="https://github.com/grishace/ddd-akka" /></a><br/>
+<a href="https://github.com/grishace/ddd-akka"><a href="https://github.com/grishace/ddd-akka">https://github.com/grishace/ddd-akka</a></a></p>
 
 </section>
 
