Update generated slides

--- a/index.html
+++ b/index.html
@@ -88,7 +88,37 @@ October 23, 2015</small></p>
 
 <section >
 
+<section >
+
 <h3>Resources</h3>
+
+<ul>
+<li>JVM Akka <a href="http://akka.io"><a href="http://akka.io">http://akka.io</a></a></li>
+<li>Akka.NET <a href="http://httpgetakka.net"><a href="http://getakka.net">http://getakka.net</a></a></li>
+<li>Akka.NET Bootcamp <a href="https://petabridge.com/bootcamp/"><a href="https://petabridge.com/bootcamp/">https://petabridge.com/bootcamp/</a></a></li>
+</ul>
+
+</section>
+
+<section author="Grigoriy Belenkiy" description="Actor-based concurrency with Akka.NET. Denver Dev Day (October 23, 2015)" theme="simple" title="Actor-based concurrency with Akka.NET" transition="zoom">
+
+<h3>Books</h3>
+
+<table id="books-table"><tr>
+<td width="33%"><a href="https://www.manning.com/books/akka-in-action" title="Akka in Action"><img alt="Akka in Action" src="./images/roestenburg-meap.png"/></td>
+<td width="33%"><a href="http://shop.oreilly.com/product/0636920028789.do" title="Effective Akka"><img alt="Effective Akka" src="./images/lrg.jpg"/></td>
+<td width="34%"><a href="http://www.amazon.com/Reactive-Messaging-Patterns-Actor-Model/dp/0133846830/" title="Reactive Messaging Patterns with the Actor Model: Applications and Integration in Scala and Akka"><img alt="Reactive Messaging Patterns with the Actor Model: Applications and Integration in Scala and Akka" src="./images/b974c4b898c2485ca7bb6e08caf7a30f.jpg"/></td>
+</tr>
+<tr><td>
+<small><h3>Akka in Action</h3</a>
+<h4>by Raymond Roestenburg, Rob Bakker, and Rob Williams</h4></small></td>
+<td><small><h3>Effective Akka</h3></a>
+<h4>by Jamie Allen</h4></small></td>
+<td><small><h3>Reactive Messaging<br/>Patterns with the Actor Model</h3></a>
+<h4>by Vaughn Vernon</h4></small></td>
+</tr></table>
+
+</section>
 
 </section>
 
