Update generated slides

--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
         
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
-            <section >
+            <section data-background="images/ddd-2015-10-sponsors.jpg" data-background-color="black" data-background-transition="none">
+
+<aside class="notes">
+Sponsors slide (required by organizators) - Oct 2015<br/>
+</aside>
+
+</section>
+
+<section >
 
 <h3>Actor-based concurrency with Akka.NET</h3>
 
@@ -74,6 +82,18 @@ October 23, 2015</small></p>
 <li>Actor model</li>
 <li>Akka.NET</li>
 <li>Sample application</li>
+</ul>
+
+</section>
+
+<section >
+
+<h3>Other Actors implementations</h3>
+
+<ul>
+<li>Orleans<br/><a href="https://github.com/dotnet/orleans"><a href="https://github.com/dotnet/orleans">https://github.com/dotnet/orleans</a></a><br/></li>
+<li>PostSharp<br/><a href="https://github.com/dotnet/orleans"><a href="http://doc.postsharp.net/actor">http://doc.postsharp.net/actor</a></a><br/><small>commercial product, only 10 classes per project in free version</small><br/></li>
+<li>F# MailboxProcessor<br/><a href="https://msdn.microsoft.com/en-us/library/ee370357.aspx?f=255&amp;MSPPError=-2147217396">MSDN</a><br/><small>included into FSharp.Core</small></li>
 </ul>
 
 </section>
