Update generated slides

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
-            <section data-background="images/ddd-2015-10-sponsors.jpg" data-background-color="black" data-background-transition="none">
+            <section data-background="images/ddd-2015-10-sponsors.png" data-background-color="black" data-background-transition="none">
 
 <aside class="notes">
 Sponsors slide (required by organizators) - Oct 2015<br/>
@@ -178,6 +178,14 @@ Akka.NET (<a href="https://www.typesafe.com/">Petabridge</a>, 2014-2015)</p>
 
 <section >
 
+<h3>Actor</h3>
+
+<p><img src="./images/actor.png" alt="Actor" /></p>
+
+</section>
+
+<section >
+
 <h3>Hello, World!</h3>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
@@ -198,14 +206,6 @@ Akka.NET (<a href="https://www.typesafe.com/">Petabridge</a>, 2014-2015)</p>
       }
       actorSystem.AwaitTermination();
 </code></pre></td></tr></table>
-
-</section>
-
-<section >
-
-<h3>Actor</h3>
-
-<p><img src="./images/actor.png" alt="Actor" /></p>
 
 </section>
 
@@ -234,6 +234,14 @@ Akka.NET (<a href="https://www.typesafe.com/">Petabridge</a>, 2014-2015)</p>
 <p><img src="./images/AllForOne.png" alt="All-For-One Strategy" /></p>
 
 </section>
+
+</section>
+
+<section >
+
+<h3>Demo</h3>
+
+<p><img src="https://github.com/grishace/ddd-akka/tree/master/code" alt="https://github.com/grishace/ddd-akka/tree/master/code" /></p>
 
 </section>
 
