Update generated slides

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Akka.NET (<a href="https://www.typesafe.com/">Petabridge</a>, 2014-2015)</p>
 
 <h3>Demo</h3>
 
-<p><img src="https://github.com/grishace/ddd-akka/tree/master/code" alt="https://github.com/grishace/ddd-akka/tree/master/code" /></p>
+<p><a href="https://github.com/grishace/ddd-akka/tree/master/code"><a href="https://github.com/grishace/ddd-akka/tree/master/code">https://github.com/grishace/ddd-akka/tree/master/code</a></a></p>
 
 </section>
 
