Update generated slides

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <section data-background="images/ddd-2015-10-sponsors.png" data-background-color="black" data-background-transition="none">
 
 <aside class="notes">
-Sponsors slide (required by organizators) - Oct 2015<br/>
+Sponsors slide (required by organizers) - Oct 2015<br/>
 </aside>
 
 </section>
