Update generated slides

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ October 23, 2015</small></p>
 
 <aside class="notes">
 Free lunch is over - 2005 - Dr. Dobb's magazine<br/>
-Moore's law - 1965- transistor doubles every 18 months (and speed)<br/>
-Amdahl’s law - 1967 - max speedup from parallel execution ~20%<br/>
+Moore's law - 1965- transistor doubles every 18 months (and speed) Gordon Moore - founder of Intel<br/>
+Amdahl’s law - 1967 - max speedup from parallel execution ~20% Gene Amdahl - computer architect<br/>
 </aside>
 
 </section>
@@ -144,7 +144,8 @@ async/await + TPL<br/>
 <p>Carl Hewitt (1973), <a href="https://en.wikipedia.org/wiki/Actor_model">Wikipedia</a></p>
 
 <aside class="notes">
-Extreme encapsulation<br/>
+Computer scientist<br/>
+Extreme encapsulation (Martin Odersky)<br/>
 </aside>
 
 </section>
@@ -331,6 +332,10 @@ Images by Petabridge<br/>
 <li>Akka.NET <a href="http://httpgetakka.net"><a href="http://getakka.net">http://getakka.net</a></a></li>
 <li>Akka.NET Bootcamp <a href="https://petabridge.com/bootcamp/"><a href="https://petabridge.com/bootcamp/">https://petabridge.com/bootcamp/</a></a></li>
 </ul>
+
+<aside class="notes">
+Princeples of Reactive Programming (Coursera)<br/>
+</aside>
 
 </section>
 
